(style) fix button text and alignment, add footer placeholder

--- a/client/assets/css/main.scss
+++ b/client/assets/css/main.scss
@@ -34,9 +34,12 @@ body {
 	color: black;
 }
 
-#button {
-	margin-left: 50%;
-	margin-right: 50%;
+#join-button {
+	margin-left: 45%;
+}
+
+.btn {
+  width: 180px;
 }
 
 .more-info {
